--- a/template/stack/zabbix.yml
+++ b/template/stack/zabbix.yml
@@ -40,10 +40,10 @@ services:
       - zabbix-database
       - zabbix-java-gateway
     volumes: 
-      - portainer/zabbix/ssl/certs:/var/lib/zabbix/ssl/certs
-      - portainer/zabbix/ssl/keys:/var/lib/zabbix/ssl/keys
-      - portainer/zabbix/ssl/ssl_ca:/var/lib/zabbix/ssl/ssl_ca
-      - portainer/zabbix/externalscripts:/usr/lib/zabbix/externalscripts
+      - portainer/Zabbix/ssl/certs:/var/lib/zabbix/ssl/certs
+      - portainer/Zabbix/ssl/keys:/var/lib/zabbix/ssl/keys
+      - portainer/Zabbix/ssl/ssl_ca:/var/lib/zabbix/ssl/ssl_ca
+      - portainer/Zabbix/externalscripts:/usr/lib/zabbix/externalscripts
   zabbix-frontend:
     image: zabbix/zabbix-web-apache-mysql:alpine-latest
     container_name: zabbix-frontend
@@ -62,15 +62,15 @@ services:
       - zabbix-java-gateway
       - zabbix-server
     volumes: 
-      - portainer/zabbix/ssl/apache2:/etc/ssl/apache2
-      - poratiner/zabbix/web/certs:/etc/zabbix/web/certs
+      - portainer/Zabbix/ssl/apache2:/etc/ssl/apache2
+      - poratiner/Zabbix/web/certs:/etc/zabbix/web/certs
   zabbix-agent2:
     image: zabbix/zabbix-agent2:alpine-latest
     container_name: zabbix-agent2
     restart: always
     privileged: true
     environment: 
-      ZBX_HOSTNAME="Zabbix server"
+      ZBX_HOSTNAME: Zabbix server
       ZBX_SERVER_HOST=zabbix-server
     ports: 
       - 10050:10050
