--- a/template/stack/zabbix.yml
+++ b/template/stack/zabbix.yml
@@ -70,8 +70,8 @@ services:
     restart: always
     privileged: true
     environment: 
-      ZBX_HOSTNAME=Zabbix-server
-      ZBX_SERVER_HOST=zabbix-server
+      ZBX_HOSTNAME=Zabbix
+      ZBX_SERVER_HOST=zabbix
     ports: 
       - 10050:10050
     networks: 
